--- a/index.html
+++ b/index.html
@@ -1,26 +1,114 @@
 <html lang="en">
   <head>
-    <meta name="google-signin-scope" content="profile email">
-    <meta name="google-signin-client_id" content="211788763209-gqfgg526gue461545q70c5360kd9hrpg.apps.googleusercontent.com">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-scope" content="profile email" />
+    <meta
+      name="google-signin-client_id"
+      content="211788763209-gqfgg526gue461545q70c5360kd9hrpg.apps.googleusercontent.com"
+    />
+    <script src="https://apis.google.com/js/api:client.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
   <body>
-    <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+    <script>
+      var googleUser = {};
+      var startApp = function() {
+        gapi.load("auth2", function() {
+          // Retrieve the singleton for the GoogleAuth library and set up the client.
+          auth2 = gapi.auth2.init({
+            client_id: "211788763209-gqfgg526gue461545q70c5360kd9hrpg.apps.googleusercontent.com",
+            cookiepolicy: "single_host_origin"
+            // Request scopes in addition to 'profile' and 'email'
+            //scope: 'additional_scope'
+          });
+          attachSignin(document.getElementById("customBtn"));
+        });
+      };
+
+      function attachSignin(element) {
+        console.log(element.id);
+        auth2.attachClickHandler(
+          element,
+          {},
+          function(googleUser) {
+            document.getElementById("name").innerText =
+              "Signed in: " + googleUser.getBasicProfile().getName();
+          },
+          function(error) {
+            alert(JSON.stringify(error, undefined, 2));
+          }
+        );
+      }
+    </script>
+    <div class="login-box">
+      <div class="lb-header">
+        <a href="#" class="active" id="login-box-link">Login</a>
+        <a href="#" id="signup-box-link">Sign Up</a>
+      </div>
+      <div class="social-login">
+        <a href="#">
+          <i class="fa fa-facebook fa-lg"></i> Login in with facebook
+        </a>
+        <div id="gSignInWrapper">
+          
+          <div id="customBtn" class="customGPlusSignIn">
+            <span> <a> <i class="fa fa-google-plus fa-lg"></i> log in with Google </a>  </span>
+          </div>
+        </div>
+        <div id="name"></div>
+        <script>
+          startApp();
+        </script>
+
+        
+      </div>
+      <form class="email-login">
+        <div class="u-form-group">
+          <input type="email" placeholder="Email" />
+        </div>
+        <div class="u-form-group">
+          <input type="password" placeholder="Password" />
+        </div>
+        <div class="u-form-group"><button>Log in</button></div>
+        <div class="u-form-group">
+          <a href="#" class="forgot-password">Forgot password?</a>
+        </div>
+      </form>
+      <form class="email-signup">
+        <div class="u-form-group">
+          <input type="email" placeholder="Email" />
+        </div>
+        <div class="u-form-group">
+          <input type="password" placeholder="Password" />
+        </div>
+        <div class="u-form-group">
+          <input type="password" placeholder="Confirm Password" />
+        </div>
+        <div class="u-form-group"><button>Sign Up</button></div>
+      </form>
+    </div>
     <script>
       function onSignIn(googleUser) {
         // Useful data for your client-side scripts:
         var profile = googleUser.getBasicProfile();
         console.log("ID: " + profile.getId()); // Don't send this directly to your server!
-        console.log('Full Name: ' + profile.getName());
-        console.log('Given Name: ' + profile.getGivenName());
-        console.log('Family Name: ' + profile.getFamilyName());
+        console.log("Full Name: " + profile.getName());
+        console.log("Given Name: " + profile.getGivenName());
+        console.log("Family Name: " + profile.getFamilyName());
         console.log("Image URL: " + profile.getImageUrl());
         console.log("Email: " + profile.getEmail());
 
         // The ID token you need to pass to your backend:
         var id_token = googleUser.getAuthResponse().id_token;
         console.log("ID Token: " + id_token);
-      };
+      }
     </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script
+      src="https://apis.google.com/js/platform.js?onload=renderButton"
+      async
+      defer
+    ></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
