--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
           function(googleUser) {
             document.getElementById("name").innerText =
               "Signed in: " + googleUser.getBasicProfile().getName();
+              
             document.getElementById("name").innerText +=
-              "Signed with email: " + googleUser.getBasicProfile().getEmail();
+              `
+              Signed with email: ` + googleUser.getBasicProfile().getEmail();
           },
           function(error) {
             
